# textual-window

./: .gitignore  CHANGELOG.md  Changelog.md  README.md  Roadmap.md  TODO.md  ci-requirements.txt  justfile  noxfile.py  pyproject.toml
.github/scripts/: tag_release.py  validate_main.sh
.github/workflows/: ci-checks.yml  release.yml  update-docs.yml
docs/: docs.md  reference.md
src/textual_window/: __init__.py  button_bases.py  demo.py  demostyles.tcss  manager.py  switcher.py  window.py  windowbar.py  windowcomponents.py
tests/: app_test.py  test_suite.py  teststyles.tcss
