[project]
name = "textual-window"
version = "0.5.2"
description = "A Textual widget for a floating, draggable window and included window bar/manager system."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "edward-jazzhands", email = "ed.jazzhands@gmail.com" }
]

license = { text = "MIT" }

keywords = ["python", "textual", "tui", "window", "widget"]

dependencies = [
    "textual>=3.5.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/edward-jazzhands/textual-window"
Changelog = "https://github.com/edward-jazzhands/textual-window/blob/master/Changelog.md"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "ruff>=0.11.11",
    "textual-dev>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
textual-window = "textual_window.demo:run_demo"

[tool.black]
line-length = 110

[tool.mypy]
python_version = "3.10"
pretty = true
strict = true
disallow_untyped_defs = true
disallow_untyped_calls = true


