[project]
name = "textual-window"
version = "0.7.1"
description = "A Textual widget for a floating, draggable window and included window bar/manager system."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "edward-jazzhands", email = "ed.jazzhands@gmail.com" }
]
license = { text = "MIT" }
keywords = ["python", "textual", "tui", "window", "widget"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "ezpubsub>=0.2.0",
    "textual>=3.0.0,<6.0.0",
]

[project.urls]
Repository = "https://github.com/edward-jazzhands/textual-window"
Changelog = "https://github.com/edward-jazzhands/textual-window/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
textual-window = "textual_window.demo:run_demo"

##########################
# Dev Dependency Configs #
##########################

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-textual-snapshot>=1.1.0",
    "ruff>=0.11.11",
    "textual-dev>=1.7.0",
]

[tool.black]
line-length = 110

[tool.mypy]
pretty = true
strict = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.basedpyright]
include = ["src"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
